--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
     // log4j
-    implementation("org.apache.logging.log4j:log4j-core:2.25.2")
+    implementation('org.apache.logging.log4j:log4j-core:2.25.3')
 
     // protobuf
     implementation('com.google.protobuf:protobuf-java:4.28.2')
